--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # url: https://y7kim.github.io
 url:
 # baseurl: /agency-jekyll-theme/
-baseurl:
+baseurl: /estefanialopez
 
 # Site settings
 title: Estefanía López
